--- a/ChaosHomeworksPart2/DirectXHomeworksProject/MainWindow.ui
+++ b/ChaosHomeworksPart2/DirectXHomeworksProject/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Snake App</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
